--- a/src/components/sandwichComp/sandwichMenu.css
+++ b/src/components/sandwichComp/sandwichMenu.css
@@ -165,7 +165,7 @@
 
     .sandwichComp {
         width: 100%; 
-        height: 50%;   
+        height: 100%;   
     }
 
     #sandwichMenuExit {
